# MIDIProg

./: README.md  benchmark.sc  benchmarks.ods
data/: config.cmd  dss-1.cmd  dw-8000.cmd  ju-2.cmd  midi.cmd  run.cmd
src/: config.cpp  config.h  interpreter.cpp  interpreter.h  main.cpp  midi_prog.pro  midiinterface.cpp  midiinterface.h  parameter.cpp  parameter.h  synth.cpp  synth.h  utils.h
src/cpp/midi_prog/: command_parsing.h  config.cpp  config.h  interpreter.cpp  interpreter.h  main.cpp  midi_prog.pro  midicommand.cpp  midicommand.h  midiinterface.cpp  midiinterface.h  parameter.cpp  parameter.h  synth.cpp  synth.h  utils.h
src/cpp/midi_prog/parsing/: commandparser.cpp  commandparser.h
src/dart/: config.cmd  dss-1.cmd  dw-8000.cmd  synth.toml
src/dart/interpreter/dart/: main.dart
src/parsing/: commandparser.cpp
src/rust/: Cargo.toml
src/rust/data/: commands.cmd  config.cmd  dss-1.cmd
src/rust/src/: main.rs
src/rust/src/lib/: config.rs  interpreter.rs  mod.rs
src/rust/src/lib/data/: midi_command.rs  mod.rs  parameter.rs  synth.rs
src/rust/src/lib/utils/: command_parser.rs  midi.rs  mod.rs  ports.rs
