[package]
name = "midi_prog"
version = "0.1.0"
authors = ["Florent Uguet <florent.uguet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
hex = "0.3"